<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_prompt"
    />
	<GridView xmlns:android="http://schemas.android.com/apk/res/android" 
	    android:id="@+id/gridview"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:columnWidth="10dp"
	    android:numColumns="3"
	    android:verticalSpacing="1dp"
	    android:horizontalSpacing="1dp"
	    android:gravity="left"
	/>
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_prompt"
    />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="horizontal"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    >
    	<Button
    		android:id="@+id/column1"
    		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1"
    	/>
    	<Button
    		android:id="@+id/column2"
    		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/button2"
    	/>
    	<Button
    		android:id="@+id/column3"
    		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/button3"
    	/>
    </LinearLayout>
</LinearLayout>
